# fcitx-module-touchscreen

./: CMakeLists.txt
debian/: changelog  control  copyright
src/: CMakeLists.txt  fcitx-touchscreen.conf.in  fcitx-touchscreen.desc  keyboard.c  keyboard.h  module.c  module.h  myxi.c  myxi.h  touchscreen.c
ui/: CMakeLists.txt  X_misc.c  X_misc.h  html.qrc  index.html  index.mini.html  main.cpp
